# git-gut

./: .gitignore  .pylintrc  LICENSE  README.md  main.py  mission  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  (+1 more)
adapters/: __init__.py  pretty_table_adapter.py  rich_table_adapters.py
app_types/: __init__.py  builders.py  dataclasses.py  generics.py  node_validation_errors.py  protocols.py  result.py  utils.py  validation_errors.py
builders/: ColumnBuilder.py  __init__.py  color_pipeline_builder.py  column_builder.py  column_data_builder.py  table_data_builder.py  table_painter_builder.py
command_interface/: __init__.py  help_text.py  option_processors.py  options.py  parameter_lists.py
config/: __init__.py  command_defaults.py
decorators/: __init__.py  column_building_method.py
defaults/: __init__.py  color.py  color_pipelines.py  command.py
documentation/: where-node.drawio
enums/: __init__.py  application.py  columns.py  table.py  user_input_keywords.py
features/: __init__.py  technical_debt.py
orm/: __init__.py  base.py  git_stat.py
query_option_parser/: __init__.py  nodes.py  parser.py  parser_utils.py  string_tokens.py  transformers.py
readmes/: query-docs.md
repositories/: __init__.py  git_stat_repo.py  git_stat_utils.py
utils/: __init__.py  cli_table.py  colors.py  command_option_parser.py  database.py  filesystem.py  git_utils.py  id_generator.py  mappings.py  numbers.py  table_data_calculator.py  text.py
validators/: command_option_validators.py  repo_validators.py  root_node_validators.py  statement_validators.py
(+35 files in other folders)
